Fixed alignment of both charts in full demo

--- a/examples/full/css/demo.css
+++ b/examples/full/css/demo.css
@@ -119,6 +119,7 @@ table.testgrid td {
 #piechartcontent {
 	width: 300px;
 	height: 250px;
+	margin-top: 10px;
 	margin-bottom: 10px;
 }
 
